<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.MainActivity"
    android:background="@color/lighttooth">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_menu"
        app:titleTextColor="@color/white"
        app:popupTheme="@style/toolbarStyle"
        android:gravity="center_vertical"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/logo"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/app_name"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:fontFamily="@font/leaguespartan_extrabold"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/menu"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginRight="25dp"
                app:srcCompat="@drawable/icon_account" />
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bienvenue"
                    android:fontFamily="@font/leaguespartan_bold"
                    android:textColor="@color/bluepain"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UTILISATEUR"
                    android:fontFamily="@font/leaguespartan_extrabold"
                    android:textColor="@color/bluepain"
                    android:textSize="22sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_margin="5dp"

            android:background="@drawable/shape_roundsquare"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rendez-vous"
                    android:textColor="@color/bluepain"
                    android:fontFamily="@font/leaguespartan_extrabold"
                    android:textSize="30dp"/>
                <ImageButton
                    android:id="@+id/main_btn_rdv_history"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/icon_history"
                    android:layout_marginLeft="50dp" />
                <ImageButton
                    android:id="@+id/main_btn_rdv_add"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/icon_add" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="315dp"
                android:orientation="vertical"
                android:background="@drawable/shape_roundsquare"
                android:backgroundTint="@color/hospitalfashion">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_btn_services"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/white"
                android:text="Nos traitements et services"
                android:textColor="@color/bluepain"
                android:fontFamily="@font/leaguespartan_bold"
                android:textSize="19sp" />

            <ImageButton
                android:id="@+id/main_btn_local"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/local_button" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button" />

            <Button
                android:id="@+id/btn_test_inscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_inscrire" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>